--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ click==8.1.7
 colorama==0.4.6
 distlib==0.3.4
 filelock==3.7.1
-Flask==3.0.3
+Flask==2.0.1
 idna==3.7
 importlib_metadata==7.1.0
 itsdangerous==2.2.0
@@ -25,4 +25,5 @@ virtualenv==20.14.1
 virtualenv-clone==0.5.7
 Werkzeug==3.0.2
 zipp==3.18.1
-gunicorn 
+gunicorn==20.0.4
+requests==2.25.1
